Add email to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Christian Helle's Blog
-# email: someone@example.com
+email: christian.helle@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
   This blog is dedicated to the art of building software.
   I write about my creations, discoveries, and solutions to problems
