--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 title: Christian Helle's Blog
 email: christian.helle@outlook.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
   This blog is dedicated to the art of building software.
   I write about my creations, discoveries, and solutions to problems
   that I encounter while building software.
+
 baseurl: "/"
 url: "https://christianhelle.github.io"
 twitter_username: christianhelle
@@ -17,6 +18,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-feed
+  - jekyll-seo-tag
 
 minima:
   skin: dark
