--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -11,6 +11,10 @@ on:
   push:
     branches: ["master"]
 
+  pull_request:
+    branches:
+      - '*'
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -57,6 +61,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
