Update jekyll site url to https://christianhelle.com

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >-
   that I encounter while building software.
 
 baseurl: "/"
-url: "https://christianhelle.github.io"
+url: "https://christianhelle.com"
 twitter_username: christianhelle
 github_username:  christianhelle
 
