Add jekyll-redirect-from plugin to whitelist

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,9 @@ plugins:
   - jekyll-seo-tag
   - jekyll-redirect-from
 
+whitelist:
+  - jekyll-redirect-from
+
 minima:
   skin: dark
   social_links:
