Update push trigger to only run if workflow itself is changed

--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -3,6 +3,10 @@ name: Test for broken links
 on:
   workflow_dispatch:
   push:
+    paths: 
+    - '.github/workflows/crawler.yml'
+    branches: 
+    - '*'
   schedule:
     - cron:  '0 * * * *'
 
