Remove job that uses celinekurpershoek/link-checker@v1.0.2

--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -12,27 +12,6 @@ on:
 
 jobs:
   
-  linux:
-    runs-on: ubuntu-latest
-    name: Test site for broken links
-    steps:
-      - name: Check for broken links
-        id: link-report
-        uses: celinekurpershoek/link-checker@v1.0.2
-        continue-on-error: false
-        with:
-          url: "https://christianhelle.com"
-          honorRobotExclusions: false
-          recursiveLinks: true
-      - name: Get the result
-        run: echo "${{steps.link-report.outputs.result}}" > broken-links-report.txt
-      - name: Publish results
-        uses: actions/upload-artifact@v2
-        with:
-          name: Artifacts
-          path: |
-            broken-links-report.txt
-  
   windows:
     runs-on: windows-latest
     name: Test site for broken links
@@ -44,7 +23,7 @@ jobs:
       - name: Install LinkChecker
         run: pip install linkchecker
       - name: Run LinkChecker
-        run: linkchecker https://christianhelle.com --check-extern
+        run: linkchecker https://christianhelle.com --check-extern > broken-links-report.txt
       - name: Publish results
         uses: actions/upload-artifact@v2
         with:
