--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -54,10 +54,10 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: Run tests
-        working-directory: dotnet
         continue-on-error: true
         run: |
           bundle exec jekyll serve &
+          cd dotnet
           dotnet build
           ./bin/Debug/net6.0/playwright.ps1 install
           dotnet test -c Release
