--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -2,6 +2,7 @@ name: Test for broken links
 
 on:
   workflow_dispatch:
+  pull_request:
   push:
     paths:
       - ".github/workflows/crawler.yml"
