--- a/.github/workflows/test-crawler.yml
+++ b/.github/workflows/test-crawler.yml
@@ -1,36 +1,18 @@
-name: Test for broken links
+name: Playwright Tests
 
 on:
   workflow_dispatch:
+  pull_request:    
   push:
     paths:
-      - ".github/workflows/crawler.yml"
+      - ".github/workflows/test-crawler.yml"
     branches:
       - "*"
   schedule:
     - cron: "0 * * * *"
 
 jobs:
-  windows:
-    runs-on: windows-latest
-    name: Test site for broken links
-    steps:
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python_version }}
-      - name: Install LinkChecker
-        run: pip install linkchecker
-      - name: Run LinkChecker
-        run: linkchecker https://christianhelle.com --check-extern > broken-links-report.txt
-      - name: Publish results
-        uses: actions/upload-artifact@v2
-        with:
-          name: Artifacts
-          path: |
-            broken-links-report.txt
-
-  playwrigt:
+  playwright:
     runs-on: windows-latest
     name: Playwright tests
     steps:
