Revert back to using site description

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Christian Helle's Blog
 email: christian.helle@outlook.com
-footer_text: >-
+description: >-
   This blog is dedicated to the art of building software.
   I write about my creations, discoveries, and solutions to problems
   that I encounter while building software.
