--- a/.github/workflows/production-crawler.yml
+++ b/.github/workflows/production-crawler.yml
@@ -23,6 +23,7 @@ jobs:
         run: pip install linkchecker
       - name: Run LinkChecker
         run: linkchecker https://christianhelle.com --check-extern > broken-links-report.txt
+        continue-on-error: true
       - name: Publish results
         uses: actions/upload-artifact@v2
         with:
