--- a/_config.yml
+++ b/_config.yml
@@ -42,5 +42,12 @@ minima:
 
 paginate: 3
 paginate_path: /page/:num/
+defaults:
+  - 
+    scope:
+      path: "page"
+    values:
+      sitemap: false
+
 google_analytics: G-NWTG8BT7S6
 permalink: /:categories/:year/:month/:title:output_ext
