--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ minima:
     - { platform: linkedin,         user_url: "https://www.linkedin.com/in/christianhelle" }
     - { platform: microdotblog,     user_url: "https://micro.blog/christianhelle" }
     - { platform: pinterest,        user_url: "https://www.pinterest.com/christianhelle" }
-    - { platform: stackoverflow,    user_url: "https://stackoverflow.com/users/575374" }
+    - { platform: stackoverflow,    user_url: "https://stackoverflow.com/users/575374/christian-resma-helle" }
     - { platform: telegram,         user_url: "https://t.me/christianhelle" }
     - { platform: twitter,          user_url: "https://twitter.com/christianhelle" }
     - { platform: mastodon,         user_url: "https://techhub.social/@christianhelle" }
