Update workflows to use env specific _config.yml

--- a/.github/workflows/test-crawler.yml
+++ b/.github/workflows/test-crawler.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Run tests
         continue-on-error: true
         run: |
+          cp _config_dev.yml _config.yml
           bundle exec jekyll serve &
           cd dotnet
           dotnet build
