--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -36,5 +36,14 @@ minima:
     - { platform: mastodon,         user_url: "https://techhub.social/@christianhelle" }
     - { platform: mastodon,         user_url: "https://mastodon.social/@christianhelle" }
 
+paginate: 10
+paginate_path: /page/:num/
+defaults:
+ - 
+   scope:
+     path: "page"
+   values:
+     sitemap: false
+
 google_analytics: G-NWTG8BT7S6
 permalink: /:categories/:year/:month/:title:output_ext
